[package]
name = "rusty-ports"
version = "0.1.0"
authors = ["Louis Brunner <louis.brunner.fr@gmail.com>"]

[dependencies]
clap = "2.33.1"
users = "0.10.0"
ctrlc = { version = "3.1.4", features = ["termination"] }
mockers_derive = "0.21.0"
tokio = "0.2.21"
futures = "0.3.5"

[dev-dependencies]
mockstream = "0.0.3"
mockers = "0.21.0"

[badges]
travis-ci = { repository = "LouisBrunner/rusty-ports", branch = "master" }
