[package]
name = "rusty-ports"
version = "0.1.0"
authors = ["Louis Brunner <louis.brunner.fr@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
users = "0.10.0"
mockers_derive = "0.21.0"
futures = "0.3.5"
log = "0.4.8"
simplelog = "0.8.0"
testing_logger = "0.1.1"
async-std = "1.6.2"
thiserror = "1.0.20"
libc = "0.2.72"

[dev-dependencies]
mockers = "0.21.0"
